Modification done because using of DataConverterAbstract class.

--- a/angularjs/prototype/view/edit_form/edit_copy_form.html
+++ b/angularjs/prototype/view/edit_form/edit_copy_form.html
@@ -1,8 +1,7 @@
 <div class='row'>
     <div class='span9'>
         <form class='pull-right'>
-            <input type='text' placeholder='Search' ng-model='myFilter.searchForm'/>
-            <span class='help-block'>Use the search box to filter the table.</span>
+            <input type='text' placeholder='Search in the table' ng-model='myFilter.searchForm'/>
         </form>
         <table class='table table-condensed table-striped'>
             <thead>
